gix-macros/tests/momo/ux/error_on_struct.rs
fn main() {}

/// Only functions work with momo
#[gix_macros::momo]
struct S;
